--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.12",
+    "pika>=1.3.2",
     "python-dotenv>=1.1.0",
     "uvicorn>=0.34.2",
 ]
