--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "celery>=5.5.2",
     "fastapi>=0.115.12",
+    "flower>=2.0.1",
+    "httpx>=0.28.1",
     "pika>=1.3.2",
+    "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.0",
     "uvicorn>=0.34.2",
 ]
